<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".DetailActivity">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_back_white"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/btnBack"
        android:layout_marginTop="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnBack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="4dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="4dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:id="@+id/card_view"
                        android:layout_width="120dp"
                        android:layout_height="160dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:id="@+id/book_img"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/book_image"
                            android:scaleType="centerCrop" />
                    </android.support.v7.widget.CardView>

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="Title" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="4dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="4dp"
                app:cardCornerRadius="10dp">

                <TableLayout
                    android:id="@+id/table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin">

                    <TableRow
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_weight="0.5"
                            android:text="@string/writer" />

                        <TextView
                            android:id="@+id/tvWriter"
                            android:layout_weight="1"
                            android:textColor="#000"
                            tools:text="Muklas Rahmanto" />
                    </TableRow>

                    <TableRow android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_weight="0.5"
                            android:text="@string/publisher"/>

                        <TextView
                            android:id="@+id/tvPublisher"
                            android:layout_weight="1"
                            android:textColor="#000"
                            tools:text="Hiyahiya" />
                    </TableRow>

                    <TableRow android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_weight="0.5"
                            android:text="@string/year" />

                        <TextView
                            android:id="@+id/tvYear"
                            android:layout_weight="1"
                            android:textColor="#000"
                            tools:text="2019" />
                    </TableRow>

                    <TableRow android:layout_marginBottom="16dp">

                        <TextView
                            android:layout_weight="0.5"
                            android:text="@string/genre" />

                        <TextView
                            android:id="@+id/tvGenre"
                            android:layout_weight="1"
                            android:textColor="#000"
                            tools:text="Novel" />
                    </TableRow>
                </TableLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="4dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/tvDesc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    tools:text="Description" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>